added no results option

--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-* {
- 	 box-sizing: border-box;
-}
-
 #sciSearchContainer {
 	width: 500px;
 	
@@ -10,17 +6,20 @@
 
 #sciSearchBar {
   	width: 100%;
-  	font-size: 16px;
-  	padding: 12px 20px 12px 40px;
+  	font-size: 12px;
+  	padding: 6px 0px 6px 0px;
   	border: 1px solid #ddd;
   	margin-bottom: 12px;
 }
 
 #sciList {
+	border: solid #ddd;
+	border-width: 1px 0px 1px 0px;
 	width: 100%;
   	list-style-type: none;
   	padding: 0;
   	margin: 0;
+  	width: 100%;
   	height: 400px;
   	overflow-y: scroll;
 }
@@ -29,18 +28,23 @@
   	border: 1px solid #ddd;
   	margin-top: -1px; /* Prevent double borders */
   	background-color: #f6f6f6;
-  	padding: 12px;
+  	padding: 6px;
   	text-decoration: none;
-  	font-size: 18px;
+  	font-size: 14px;
   	color: black;
   	display: block
 }
 
-#sciList .header {
+/*#sciList .header {
  	 background-color: #e2e2e2;
  	 cursor: default;
 }
 
 #sciList li:hover:not(.header) {
   	background-color: #eee;
+}*/
+
+#sciList li:hover {
+  	background-color: #eee;
+  	cursor: pointer;
 }
