--- a/main.css
+++ b/main.css
@@ -1,7 +1,5 @@
 #sciSearchContainer {
 	width: 500px;
-	
-
 }
 
 #sciSearchBar {
@@ -10,21 +8,44 @@
   	padding: 6px 0px 6px 0px;
   	border: 1px solid #ddd;
   	margin-bottom: 12px;
+  	margin-right: 50px;
+  	clear: left;
 }
 
-#sciList {
+#sciSearchResults, #sciSearchSelected {
+	float: left;
 	border: solid #ddd;
 	border-width: 1px 0px 1px 0px;
-	width: 100%;
+	width: 48%;
   	list-style-type: none;
   	padding: 0;
-  	margin: 0;
-  	width: 100%;
+  	margin-top: auto;
   	height: 400px;
   	overflow-y: scroll;
+  	margin-right: 1%;
+  	margin-left: 1%;
 }
 
-#sciList li {
+#sciSearchSelected {
+	/*border: solid #ddd;
+	border-width: 1px 0px 1px 0px;
+	width: 48%;
+  	list-style-type: none;
+  	padding: 0;
+  	margin-top: auto;
+  	margin-right: 1%;
+  	margin-left: 1%;
+  	height: 400px;
+  	overflow-y: scroll;*/
+  	float: right;
+}
+
+#sciList, #sciSelectedList {
+	margin: 0;
+	padding: 0;
+}
+
+#sciList li, #sciSelectedList li {
   	border: 1px solid #ddd;
   	margin-top: -1px; /* Prevent double borders */
   	background-color: #f6f6f6;
@@ -32,7 +53,7 @@
   	text-decoration: none;
   	font-size: 14px;
   	color: black;
-  	display: block
+  	display: block;
 }
 
 /*#sciList .header {
