--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@
   	background-color: #eee;
 }*/
 
-#sciList li:hover {
+#sciList li:hover, #sciSelectedList li:hover {
   	background-color: #eee;
   	cursor: pointer;
 }
