--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-#sciSearchContainer {
+#searchContainer {
 	width: 500px;
 }
 
@@ -68,4 +68,53 @@
 #sciList li:hover, #sciSelectedList li:hover {
   	background-color: #eee;
   	cursor: pointer;
+}
+
+ul.tab {
+	width: 100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Float the list items side by side */
+ul.tab li {
+	width: 50%;
+	float: left;
+	text-align: center;
+}
+
+/* Style the links inside the list items */
+ul.tab li a {
+	width: 100%;
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 0px 14px 0px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/*http://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_open*/
+
+/* Change background color of links on hover */
+ul.tab li a:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+ul.tab li a:focus, .active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    /*border: 1px solid #ccc;*/
+    /*border-top: none;*/
 }
