--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,17 +153,52 @@ input[type="button"]:hover {
 h5.tableTitle {
 	margin: 0;
 	font-size: 14px;
+	height: 8%;
+	background-color: gray;
 }
 
-#tableInspector {
+/*#tableInspector {
 	width: 100%;
 	border: solid #ddd;
 	border-width: 1px 0px 1px 0px;
-	text-align: left;
+}*/
+
+table{
+  width:100%;
+  height: 100%;
+  table-layout: auto;
+}
+.tbl-header{
+	height: 10%;
+  	background-color: green;
+ }
+.tbl-content{
+  /*height: 92%;*/
+  overflow-x:auto;
+  margin-top: 0px;
+  /*border: 1px solid #ddd;*/
+}
+tbody tr {
+	background: #f6f6f6;
+}
+tbody tr:nth-of-type(odd) {
+  background: #e9e9e9;
+}
+th{
+  padding: auto 8px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 12px;
+  color: white;
+}
+td{
+  padding: 6px 0px;
+  text-align: center;
+  vertical-align:middle;
+  font-size: 12px;
+  color: black;
 }
 
-#tableInspector th {
-	font-size: 12px;
-	border: solid #ddd;
-	border-width: 0px 1px 1px 0px;
+tbody td {
+	height: 5px;
 }
