--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,15 @@
+/* Colors: */
+/* https://designschool.canva.com/blog/website-color-schemes/ */
+/* http://jsfiddle.net/Z4VWc/1/ */
+
+:root{
+    --ornate-color: #AB9353;
+    --plum-color: #4D2C3d;
+    --olive-color: #57652A;
+    --sleekGrey-color: #A5A5AF;
+    --bluebell-color: #155765;
+}
+
 body {
 	font-family: "Times New Roman", Times, serif;
 }
@@ -38,7 +50,7 @@ td {
 
 figure {
     display: inline-block;
-    border: 1px dotted gray;
+    border: 1px dotted var(--sleekGrey-color);
     margin: 20px; /* adjust as needed */
     position: relative;
     float: right;
@@ -101,11 +113,11 @@ path {
 }
 
 #inspectorContainer {
-	height: 48%;
+	height: 48.8%;
 	width: 505px;
 	display: block;
 	float: right;
-	border: 1px solid #ddd;
+	border: 1px solid var(--sleekGrey-color);
 }
 
 #searchBar {
@@ -113,12 +125,12 @@ path {
   	font-size: 12px;
   	margin-bottom: 5px;
   	padding: 6px 0px 6px 0px;
-  	border: 1px solid #ddd;
+  	border: 1px solid var(--sleekGrey-color);
 }
 
 #searchResultsContainer, #selectedListContainer {
 	float: left;
-	border: solid #ddd;
+	border: solid var(--sleekGrey-color);
 	border-width: 1px 1px 1px 1px;
 	width: 245px;
 	list-style-type: none;
@@ -137,7 +149,7 @@ path {
 }
 
 #searchList li, #selectedList li {
-  	border: solid #ddd;
+  	border: solid var(--sleekGrey-color);
   	border-width: 1px 0px 1px 0px;
   	margin-top: -1px; /* Prevent double borders */
   	background-color: #f6f6f6;
@@ -178,31 +190,34 @@ input[type="button"]:hover {
 
 h5.tableTitle {
 	margin: 0;
-	font-size: 14px;
 	height: 8%;
-	background-color: gray;
+	background-color: var(--plum-color);
+	padding: 0px 8px;
 }
 
-/*#tableInspector {
-	width: 100%;
-	border: solid #ddd;
-	border-width: 1px 0px 1px 0px;
-}*/
+h5.tableTitle span {
+	font-size: 14px;
+	font-weight: normal;
+	color: white;
+	display: inline-block;
+  	vertical-align: middle;
+	line-height: normal; 
+}
 
 table{
-  width:100%;
+  width: 100%;
   height: 100%;
   table-layout: auto;
 }
 .tbl-header{
 	height: 10%;
-  	background-color: green;
+  	background-color: var(--ornate-color);
  }
 .tbl-content{
-  /*height: 92%;*/
+  height: 92%;
   overflow-x:auto;
   margin-top: 0px;
-  /*border: 1px solid #ddd;*/
+  /*border: 1px solid var(--sleekGrey-color);*/
 }
 tbody tr {
 	background: #f6f6f6;
@@ -211,9 +226,9 @@ tbody tr:nth-of-type(odd) {
   background: #e9e9e9;
 }
 th{
-  padding: auto 8px;
+  padding: 0px 8px;
   text-align: center;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 12px;
   color: white;
 }
