--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,7 +206,7 @@ h5.tableTitle span {
 
 table{
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   table-layout: auto;
 }
 .tbl-header{
@@ -217,7 +217,6 @@ table{
   height: 92%;
   overflow-x:auto;
   margin-top: 0px;
-  /*border: 1px solid var(--sleekGrey-color);*/
 }
 tbody tr {
 	background: #f6f6f6;
