--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,10 +141,9 @@ figure figcaption {
 
 #svgContainer {
 	width: 400px;
-	height: 100%;
+	height: 95%;
 	float: left;
 	background-color: var(--olive-color);
-	margin-bottom: 10px;
 }
 
 path {
@@ -170,6 +169,15 @@ path {
 
 .town {
 	fill: none;
+}
+
+#scaleContainer {
+	width: 400px;
+	height: 5%;
+	float: left;
+	clear: left;
+	background-color: var(--ornate-color);
+	margin-bottom: 10px;
 }
 
 #searchContainer {
