working on inspector functionality

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -171,6 +171,18 @@ path {
 	fill: none;
 }
 
+.townDot {
+	fill: red;
+	opacity: 0.5;
+	stroke: orange;
+	stroke-width: .5px;
+}
+
+.townDot:hover {
+	fill: var(--bluebell-color);
+	cursor: pointer;
+}
+
 #scaleContainer {
 	width: 400px;
 	height: 5%;
