--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,12 +20,21 @@ body {
 	margin: auto;
 }
 
-#mainHeader {
-	margin: 0px;
+.mainHeader {
+	/*margin: 0px;*/
 	padding: 2px 2px 2px 5px;
 	color: white;
 	background-color: var(--ornate-color);
 	text-align: center;
+}
+
+h1 {
+	margin: 0px;
+}
+
+h2 {
+	margin: 10px 0 0 0;
+	clear: both;
 }
 
 #headerContainer {
@@ -39,12 +48,24 @@ body {
 	border-color: var(--sleekGrey-color);
 }
 
-#mainContainer p {
-	color: white;
-	font-style: italic;
+#aboutContainer {
+	width: 913px;
+	float: left;
+	text-align: left;
+	margin: 0 0 10px 0;
+	padding: 5px;
+	display: inline-block;
+	border-width: 0 1px 1px 1px;
+	border-style: solid;
+	border-color: var(--sleekGrey-color);
+}
+
+.subHeader {
 	margin: 0px;
 	padding: 2px 0 2px 0;
 	text-align: center;
+	font-style: italic;
+	color: white;
 	background-color: var(--plum-color);
 }
 
