--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,20 +49,22 @@ h2 {
 }
 
 #aboutContainer {
-	width: 913px;
+	width: 853px;
 	float: left;
 	text-align: left;
-	margin: 0 0 10px 0;
-	padding: 5px;
+	margin: 0;
+	padding: 0 30px 0 30px;
 	display: inline-block;
 	border-width: 0 1px 1px 1px;
 	border-style: solid;
 	border-color: var(--sleekGrey-color);
+	background-color: white;
 }
 
 .subHeader {
-	margin: 0px;
+	margin: 0 0 10px 0;
 	padding: 2px 0 2px 0;
+	clear: both;
 	text-align: center;
 	font-style: italic;
 	color: white;
