--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@
 
 body {
 	font-family: "Times New Roman", Times, serif;
+	margin: 0;
 }
 
 #mainContainer {
@@ -62,7 +63,7 @@ h2 {
 }
 
 .subHeader {
-	margin: 0 0 10px 0;
+	margin: 0;
 	padding: 2px 0 2px 0;
 	clear: both;
 	text-align: center;
@@ -78,7 +79,7 @@ h2 {
 #headerContainer ol {
 	width: 70%;
 	margin: 2px;
-	font-size: 12px;
+	font-size: 14px;
 }
 
 #headerContainer li {
